<resources>
    <string name="app_name">AHMETFLIX</string>
    <string name="kullan_c_ad">Kullanıcı Adı</string>
    <string name="e_mail">E-mail</string>
    <string name="yeni_ifre">Yeni şifre</string>
    <string name="giri_yap">Giriş yap</string>
    <string name="hesab_m_var">Hesabım var</string>
    <string name="hesab_m_yok">Yeni Hesap oluştur</string>
    <string name="yeni_hesap_ekle">Yeni hesap ekle</string>
    <string name="video_aray_n">Video arayın</string>
    <string name="back">back</string>
    <string name="ad_n">Adın:</string>
    <string name="durum">Durum:</string>
    <string name="rn_ne_seversin">örn. hangi yt kanalı seversin?</string>
    <string name="kaydet">KAYDET</string>
    <string name="hesab">Hesabını yok et 🗑️</string>
    <string name="yapan">Yapanlar || Arşivciler</string>
    <string name="st">İstek :</string>
    <string name="ah">AHMETFLIX 2022</string>
    <string name="k_yap">Çıkış Yap</string>
    <string name="ary">Daha fazla ayar</string>
    <string name="ppsillll">Profil fotorafı sil</string>
    <string name="ayr">ayarlar</string>
    <string name="yeni_hesap_olu">yeni hesap oluştur</string>
    <string name="yeni_kullan_c_yarat">Yeni kullanıcı yarat</string>
    <string name="oynat_bakal_m">Oynat Bakalım</string>
</resources>